--- a/index.html
+++ b/index.html
@@ -31,14 +31,40 @@
       </section> -->
       <section class="lg:w-[1200px] m-auto md:grid grid-cols-3 border-0">
         <div class="text-5xl bg-gray-800 p-20 max-sm:hidden"></div>
-        <div class="bg-gray-800 max-sm:pr-9 px-20 max-sm:py-9 py-16 col-span-2 text-white">
+        <div
+          class="bg-gray-800 max-sm:pr-9 px-20 max-sm:py-9 py-16 col-span-2 text-white"
+        >
           <h1 class="text-4xl font-bold max-sm:text-2xl">Keo Menglong</h1>
           <p class="text-xl max-sm:text-sm">Shipping Officer</p>
         </div>
         <div class="text-xl bg-stone-300 max-sm:text-center md:px-6">
-            <h3 class="uppercase md:text-2xl font-semibold tracking-[2px] md:mt-25">contact</h3>
-            <hr class="mx-[2px]">
-            <p></p>
+          <h3
+            class="uppercase md:text-2xl font-semibold tracking-[2px] md:mt-25"
+          >
+            contact
+          </h3>
+          <hr class="mx-[2px]" />
+          <a href="tel:(+855) 87-896-167" target="_blank"
+            ><p class="text-base pt-2">
+              <i class="fa-solid fa-phone pr-3"></i>(+855) 87-896-167
+            </p></a
+          >
+          <a href="mailto:menglongkeo07@gmail.com" target="_blank"
+            ><p class="text-base pt-2">
+              <i class="fa-solid fa-envelope pr-3"></i>menglongkeo07@gmail.com
+            </p></a
+          >
+          <a href="https://maps.app.goo.gl/S2oRfwv9z2ZAeAs67" target="_blank"
+            ><p class="text-base pt-2">
+              <i class="fa-solid fa-location-dot pr-3"></i>Phleung Chheh Roteh,
+              Phnom Penh
+            </p></a
+          >
+          <a href="https://github.com/MenglongK" target="_blank"
+            ><p class="text-base pt-2">
+              <i class="fa-brands fa-github pr-3"></i>Github
+            </p></a
+          >
         </div>
         <div class="text-5xl bg-green-800 p-20 col-span-2">4</div>
       </section>
