--- a/index.html
+++ b/index.html
@@ -21,15 +21,9 @@
       }
     </style>
   </head>
-  <body>
+  <body class="bg-gray-100 p-12">
     <main class="text-gray-800">
-      <!-- <section class="container lg:w-[1200px] bg-gray-800 m-auto">
-        <div class="text-end max-sm:pr-9 pr-20 max-sm:py-9 py-16 text-white">
-          <h1 class="text-4xl font-bold max-sm:text-2xl">Keo Menglong</h1>
-          <p class="text-xl max-sm:text-sm">Shipping Officer</p>
-        </div>
-      </section> -->
-      <section class="lg:w-[1200px] m-auto md:grid grid-cols-3 border-0">
+      <section class="lg:w-[950px] m-auto md:grid grid-cols-3 border-0">
         <div class="text-5xl bg-gray-800 p-20 max-sm:hidden"></div>
         <!-- header -->
         <div
@@ -38,45 +32,50 @@
           <h1 class="text-4xl font-bold max-sm:text-2xl">Keo Menglong</h1>
           <p class="text-xl max-sm:text-sm">Shipping Officer</p>
         </div>
+        <div class="w-44 h-44 rounded-full overflow-hidden absolute left-[260px] top-[140px]">
+          <img src="./src/image/Profile.jpg" class="w-full object-fit-contain" alt="Profile" />
+        </div>
         <!-- left side -->
         <div class="text-xl bg-stone-300 max-sm:text-center md:px-6 pb-6">
           <h3
-            class="uppercase md:text-2xl font-semibold tracking-[2px] md:mt-25"
+            class="uppercase md:text-xl font-semibold tracking-[2px] md:mt-25"
           >
             contact
           </h3>
           <hr />
-          <div class="flex pt-2">
+          <div class="flex pt-3">
             <div class="grid grid-cols-1 gap-3">
-              <i class="fa-solid fa-phone text-base pr-3"></i>
-              <i class="fa-solid fa-envelope text-base pr-3"></i>
-              <i class="fa-solid fa-location-dot text-base pr-3"></i>
-              <i class="fa-brands fa-github text-base pr-3"></i>
+              <i class="fa-solid fa-phone text-[16px] pr-3"></i>
+              <i class="fa-solid fa-envelope text-[16px] pr-3"></i>
+              <i class="fa-solid fa-location-dot text-[16px] pr-3"></i>
+              <i class="fa-brands fa-github text-[16px] pr-3"></i>
             </div>
             <div class="grid grid-cols-1 gap-3">
               <a href="tel:+85587896167" target="_blank"
-                ><p class="text-base">(+855) 87-896-167</p></a
+                ><p class="text-[14px]">(+855) 87-896-167</p></a
               >
               <a href="mailto:menglongkeo07@gmail.com" target="_blank"
-                ><p class="text-base">menglongkeo07@gmail.com</p></a
+                ><p class="text-[14px]">menglongkeo07@gmail.com</p></a
               >
               <a
                 href="https://maps.app.goo.gl/S2oRfwv9z2ZAeAs67"
                 target="_blank"
-                ><p class="text-base">Phleung Chheh Roteh, Phnom Penh</p></a
+                ><p class="text-[14px]">Phleung Chheh Roteh, Phnom Penh</p></a
               >
               <a href="https://github.com/MenglongK" target="_blank"
-                ><p class="text-base">Github</p></a
+                ><p class="text-[14px]">Github</p></a
               >
             </div>
           </div>
           <h3
-            class="uppercase md:text-2xl font-semibold tracking-[2px] md:mt-10"
+            class="uppercase md:text-xl font-semibold tracking-[2px] md:mt-10"
           >
             skills
           </h3>
           <hr />
-          <ul class="list-disc md:mx-5 text-base pt-2 grid grid-cols-1 gap-2">
+          <ul
+            class="list-disc md:mx-5 text-base pt-2 grid grid-cols-1 gap-2 text-[14px]"
+          >
             <li>Project Management</li>
             <li>Teamwork</li>
             <li>Leadership</li>
@@ -84,22 +83,24 @@
             <li>Critical Thinking</li>
           </ul>
           <h3
-            class="uppercase md:text-2xl font-semibold tracking-[2px] md:mt-10"
+            class="uppercase md:text-xl font-semibold tracking-[2px] md:mt-10"
           >
             languages
           </h3>
           <hr />
-          <ul class="list-disc md:mx-5 text-base pt-2 grid grid-cols-1 gap-2">
+          <ul
+            class="list-disc md:mx-5 text-base pt-2 grid grid-cols-1 gap-2 text-[14px]"
+          >
             <li>English</li>
             <li>Khmer</li>
           </ul>
           <h3
-            class="uppercase md:text-2xl font-semibold tracking-[2px] md:mt-10"
+            class="uppercase md:text-xl font-semibold tracking-[2px] md:mt-10"
           >
             reference
           </h3>
           <hr />
-          <ul class="text-base pt-2 grid grid-cols-1 gap-2">
+          <ul class="text-base pt-2 grid grid-cols-1 gap-2 text-[14px]">
             <li class="font-bold">Mr. Kim Kesara</li>
             <li>Injae Garment Co., Ltd / Shipping Manager</li>
             <li>
@@ -113,7 +114,114 @@
           </ul>
         </div>
         <!-- Right side -->
-        <div class="text-5xl bg-green-800 p-20 col-span-2"></div>
+        <div class="text-xl bg-white col-span-2">
+          <div
+            class="max-sm:text-center md:px-6 pb-6 md:mt-10 grid grid-cols-13 gap-4"
+          >
+            <!-- Profile -->
+            <div><i class="fa-solid fa-circle-user"></i></div>
+            <div class="col-span-12">
+              <h3 class="uppercase md:text-xl font-semibold tracking-[2px]">
+                Profile
+              </h3>
+              <hr />
+              <ul class="pt-2 text-justify grid gap-1 text-[14px]">
+                <li class="grid grid-cols-7 gap-2">
+                  <span class="font-bold">Address:</span>
+                  <p class="col-span-6">
+                    Prey Kei Village, Sangkat Phleung Chheh Roteh, Khan Pou
+                    Senchey, Phnom Penh
+                  </p>
+                </li>
+                <li class="grid grid-cols-7 gap-2">
+                  <span class="font-bold">Email:</span>
+                  <p class="col-span-6">menglongkeo07@gmail.com</p>
+                </li>
+                <li class="grid grid-cols-7 gap-2">
+                  <span class="font-bold">Tel:</span>
+                  <p class="col-span-6">(+855) 87-896-167</p>
+                </li>
+              </ul>
+            </div>
+            <!-- Work experience -->
+            <div><i class="fa-solid fa-briefcase"></i></div>
+            <div class="col-span-12">
+              <h3 class="uppercase md:text-xl font-semibold tracking-[2px]">
+                work experience
+              </h3>
+              <hr />
+              <ul class="pt-2 text-justify grid gap-1 text-[14px]">
+                <div class="grid grid-cols-2 font-bold">
+                  <li>Trax apparel (cambodia) co. ltd</li>
+                  <span class="text-end">2018-2019</span>
+                </div>
+                <li class="pb-2">IE (Industry Engineer)</li>
+                <li class="list-disc md:mx-5">
+                  Arrange layout machine for sewing line
+                </li>
+                <li class="list-disc md:mx-5">
+                  Improving output quantity & quality
+                </li>
+                <li class="list-disc md:mx-5">
+                  Follow rule high output less sewer
+                </li>
+              </ul>
+              <ul class="pt-4 text-justify grid gap-1 text-[14px]">
+                <div class="grid grid-cols-2 font-bold">
+                  <li>Injae Garment Co. Ltd</li>
+                  <span class="text-end uppercase">2019-present</span>
+                </div>
+                <li class="pb-2">Shipping Officer</li>
+                <li class="list-disc md:mx-5">
+                  Arrange packing plan & handle revision with actual quantity
+                </li>
+                <li class="list-disc md:mx-5">
+                  Arrange packing list for booking to VSSL
+                </li>
+                <li class="list-disc md:mx-5">
+                  Organize tasks base on manager provide
+                </li>
+                <li class="list-disc md:mx-5">
+                  Inspect & loading carton to the containers
+                </li>
+                <li class="list-disc md:mx-5">
+                  Prepare record for export document
+                </li>
+              </ul>
+            </div>
+            <!-- Education -->
+            <div><i class="fa-solid fa-user-graduate"></i></div>
+            <div class="col-span-12">
+              <h3 class="uppercase md:text-xl font-semibold tracking-[2px]">
+                Education
+              </h3>
+              <hr />
+              <ul class="pt-2 text-justify grid gap-1 text-[14px]">
+                <div class="grid grid-cols-2 font-bold">
+                  <li>High School (Bac II)</li>
+                  <span class="text-end">2015-2018</span>
+                </div>
+                <li class="pb-2">Preah bat Suramarith high school</li>
+              </ul>
+              <ul class="pt-2 text-justify grid gap-1 text-[14px]">
+                <div class="grid grid-cols-2 font-bold">
+                  <li>Bachelor of English for Communication</li>
+                  <span class="text-end">2021-2024</span>
+                </div>
+                <li class="pb-2">Western University</li>
+              </ul>
+              <ul class="pt-2 text-justify grid gap-1 text-[14px]">
+                <div class="grid grid-cols-2 font-bold">
+                  <li>Associate of Information Technology</li>
+                  <span class="text-end uppercase">2025-present</span>
+                </div>
+                <li class="pb-2">
+                  Institute of Science and Technology Advanced Development
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
   </body>
