--- a/index.html
+++ b/index.html
@@ -23,17 +23,6 @@
   </head>
   <body class="bg-gray-100">
     <main class="text-gray-800 py-12">
-      <!-- <div class="relative flex items-center">
-        <div
-          class="absolute w-44 h-44 rounded-full overflow-hidden left-[260px] bottom-[-260px]"
-        >
-          <img
-            src="./src/image/Profile.jpg"
-            class="w-full object-cover"
-            alt="Profile"
-          />
-        </div>
-      </div> -->
       <div class="lg:w-[950px] m-auto md:grid grid-cols-3 border-0">
         <div class="relative flex items-center transition-shadow duration-300">
           <div
@@ -73,18 +62,18 @@
             </div>
             <div class="grid grid-cols-1 gap-3">
               <a href="tel:+85587896167" target="_blank"
-                ><p class="text-[14px]">(+855) 87-896-167</p></a
+                ><p class="text-[14px] md:hover:underline">(+855) 87-896-167</p></a
               >
               <a href="mailto:menglongkeo07@gmail.com" target="_blank"
-                ><p class="text-[14px]">menglongkeo07@gmail.com</p></a
+                ><p class="text-[14px] md:hover:underline">menglongkeo07@gmail.com</p></a
               >
               <a
                 href="https://maps.app.goo.gl/S2oRfwv9z2ZAeAs67"
                 target="_blank"
-                ><p class="text-[14px]">Phleung Chheh Roteh, Phnom Penh</p></a
+                ><p class="text-[14px] md:hover:underline">Phleung Chheh Roteh, Phnom Penh</p></a
               >
               <a href="https://github.com/MenglongK" target="_blank"
-                ><p class="text-[14px]">Github</p></a
+                ><p class="text-[14px] md:hover:underline">Github</p></a
               >
             </div>
           </div>
@@ -126,11 +115,11 @@
             <li>Injae Garment Co., Ltd / Shipping Manager</li>
             <li>
               <span class="font-bold">Phone:</span>
-              <a href="tel:+85512331293">(+855) 12-331-293</a>
+              <a href="tel:+85512331293" class="md:hover:underline">(+855) 12-331-293</a>
             </li>
             <li>
               <span class="font-bold">Email:</span>
-              <a href="mailto:kesarakim@injae.co.kr">kesarakim@injae.co.kr</a>
+              <a href="mailto:kesarakim@injae.co.kr" class="md:hover:underline">kesarakim@injae.co.kr</a>
             </li>
           </ul>
         </div>
@@ -149,18 +138,18 @@
               <ul class="pt-2 text-justify grid gap-1 text-[14px]">
                 <li class="grid grid-cols-7 gap-2">
                   <span class="font-bold">Address:</span>
-                  <p class="col-span-6">
+                  <a href="https://maps.app.goo.gl/S2oRfwv9z2ZAeAs67" target="_blank" class="col-span-6 md:hover:underline"><span>
                     Prey Kei Village, Sangkat Phleung Chheh Roteh, Khan Pou
                     Senchey, Phnom Penh
-                  </p>
+                  </span></a>
                 </li>
                 <li class="grid grid-cols-7 gap-2">
                   <span class="font-bold">Email:</span>
-                  <p class="col-span-6">menglongkeo07@gmail.com</p>
+                  <a href="mailto:menglongkeo07@gmail.com" target="_blank" class="col-span-6 md:hover:underline"><span>menglongkeo07@gmail.com</span></a>
                 </li>
                 <li class="grid grid-cols-7 gap-2">
                   <span class="font-bold">Tel:</span>
-                  <p class="col-span-6">(+855) 87-896-167</p>
+                  <a href="tel:+85587896167" target="_blank" class="col-span-6 md:hover:underline"><span>(+855) 87-896-167</span></a>
                 </li>
               </ul>
             </div>
@@ -230,6 +219,15 @@
                   <span class="text-end">2021-2024</span>
                 </div>
                 <li class="pb-2">Western University</li>
+              </ul>
+              <ul class="pt-2 text-justify grid gap-1 text-[14px]">
+                <div class="grid grid-cols-2 font-bold">
+                  <li>Short Course of Web Design</li>
+                  <span class="text-end uppercase">2024-2024</span>
+                </div>
+                <li class="pb-2">
+                  Institute of Science and Technology Advanced Development
+                </li>
               </ul>
               <ul class="pt-2 text-justify grid gap-1 text-[14px]">
                 <div class="grid grid-cols-2 font-bold">
