--- a/index.html
+++ b/index.html
@@ -62,15 +62,21 @@
             </div>
             <div class="grid grid-cols-1 gap-3">
               <a href="tel:+85587896167" target="_blank"
-                ><p class="text-[14px] md:hover:underline">(+855) 87-896-167</p></a
+                ><p class="text-[14px] md:hover:underline">
+                  (+855) 87-896-167
+                </p></a
               >
               <a href="mailto:menglongkeo07@gmail.com" target="_blank"
-                ><p class="text-[14px] md:hover:underline">menglongkeo07@gmail.com</p></a
+                ><p class="text-[14px] md:hover:underline">
+                  menglongkeo07@gmail.com
+                </p></a
               >
               <a
                 href="https://maps.app.goo.gl/S2oRfwv9z2ZAeAs67"
                 target="_blank"
-                ><p class="text-[14px] md:hover:underline">Phleung Chheh Roteh, Phnom Penh</p></a
+                ><p class="text-[14px] md:hover:underline">
+                  Phleung Chheh Roteh, Phnom Penh
+                </p></a
               >
               <a href="https://github.com/MenglongK" target="_blank"
                 ><p class="text-[14px] md:hover:underline">Github</p></a
@@ -115,11 +121,15 @@
             <li>Injae Garment Co., Ltd / Shipping Manager</li>
             <li>
               <span class="font-bold">Phone:</span>
-              <a href="tel:+85512331293" class="md:hover:underline">(+855) 12-331-293</a>
+              <a href="tel:+85512331293" class="md:hover:underline"
+                >(+855) 12-331-293</a
+              >
             </li>
             <li>
               <span class="font-bold">Email:</span>
-              <a href="mailto:kesarakim@injae.co.kr" class="md:hover:underline">kesarakim@injae.co.kr</a>
+              <a href="mailto:kesarakim@injae.co.kr" class="md:hover:underline"
+                >kesarakim@injae.co.kr</a
+              >
             </li>
           </ul>
         </div>
@@ -129,7 +139,9 @@
             class="max-sm:text-center md:px-6 pb-6 md:mt-10 grid grid-cols-13 gap-4"
           >
             <!-- Profile -->
-            <div><i class="fa-solid fa-circle-user"></i></div>
+            <div>
+              <i class="fa-solid fa-circle-user relative"></i>
+            </div>
             <div class="col-span-12">
               <h3 class="uppercase md:text-xl font-semibold tracking-[2px]">
                 Profile
@@ -138,18 +150,33 @@
               <ul class="pt-2 text-justify grid gap-1 text-[14px]">
                 <li class="grid grid-cols-7 gap-2">
                   <span class="font-bold">Address:</span>
-                  <a href="https://maps.app.goo.gl/S2oRfwv9z2ZAeAs67" target="_blank" class="col-span-6 md:hover:underline"><span>
-                    Prey Kei Village, Sangkat Phleung Chheh Roteh, Khan Pou
-                    Senchey, Phnom Penh
-                  </span></a>
+                  <a
+                    href="https://maps.app.goo.gl/S2oRfwv9z2ZAeAs67"
+                    target="_blank"
+                    class="col-span-6 md:hover:underline"
+                    ><span>
+                      Prey Kei Village, Sangkat Phleung Chheh Roteh, Khan Pou
+                      Senchey, Phnom Penh
+                    </span></a
+                  >
                 </li>
                 <li class="grid grid-cols-7 gap-2">
                   <span class="font-bold">Email:</span>
-                  <a href="mailto:menglongkeo07@gmail.com" target="_blank" class="col-span-6 md:hover:underline"><span>menglongkeo07@gmail.com</span></a>
+                  <a
+                    href="mailto:menglongkeo07@gmail.com"
+                    target="_blank"
+                    class="col-span-6 md:hover:underline"
+                    ><span>menglongkeo07@gmail.com</span></a
+                  >
                 </li>
                 <li class="grid grid-cols-7 gap-2">
                   <span class="font-bold">Tel:</span>
-                  <a href="tel:+85587896167" target="_blank" class="col-span-6 md:hover:underline"><span>(+855) 87-896-167</span></a>
+                  <a
+                    href="tel:+85587896167"
+                    target="_blank"
+                    class="col-span-6 md:hover:underline"
+                    ><span>(+855) 87-896-167</span></a
+                  >
                 </li>
               </ul>
             </div>
@@ -200,7 +227,7 @@
               </ul>
             </div>
             <!-- Education -->
-            <div><i class="fa-solid fa-user-graduate"></i></div>
+            <div><i class="fa-solid fa-graduation-cap"></i></div>
             <div class="col-span-12">
               <h3 class="uppercase md:text-xl font-semibold tracking-[2px]">
                 Education
