--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <div class="lg:w-[950px] m-auto md:grid grid-cols-3 border-0">
         <div class="relative flex items-center transition-shadow duration-300">
           <div
-            class="absolute left-16 top-20 w-44 h-44 rounded-full overflow-hidden border-3 border-white shadow-md hover:scale-105 hover:shadow-xl transition-transform duration-300 cursor-pointer"
+            class="absolute lg:left-16 lg:top-20 md:left-10 md:top-20 w-44 h-44 rounded-full overflow-hidden border-3 border-white shadow-md hover:scale-105 hover:shadow-xl transition-transform duration-300 cursor-pointer"
           >
             <img
               class="w-full object-cover"
@@ -40,10 +40,10 @@
         <div class="text-5xl bg-gray-800 p-20 max-sm:hidden"></div>
         <!-- header -->
         <div
-          class="bg-gray-800 max-sm:pr-9 px-20 max-sm:py-9 py-16 col-span-2 text-white"
+          class="bg-gray-800 max-sm:px-9 md:px-20 max-sm:py-9 py-16 col-span-2 max-md:col-span-3 text-white"
         >
-          <h1 class="text-4xl font-bold max-sm:text-2xl">Keo Menglong</h1>
-          <p class="text-xl max-sm:text-sm">Shipping Officer</p>
+          <h1 class="text-4xl font-bold max-sm:text-2xl max-md:text-center">Keo Menglong</h1>
+          <p class="text-xl max-sm:text-sm max-md:text-center">Shipping Officer</p>
         </div>
         <!-- left side -->
         <div class="text-xl bg-stone-300 max-sm:text-center md:px-6 pb-6">
